--- a/Keras_Regression_example.ipynb
+++ b/Keras_Regression_example.ipynb
@@ -32,18 +32,7 @@
     "X=X[:,np.newaxis]\n",
     "Y=np.sin(X.squeeze())+np.random.normal(0, 0.4, N)\n",
     "\n",
-    "\n",
-    "#yscaler=preprocessing.StandardScaler().fit(Y)\n",
-    "#Y=yscaler.transform(Y)#+np.random.rarand(100)-0.5#np.sin(0.01*np.array(range(1000))))\n",
-    "\n",
-    "#permidx=np.random.permutation(X.shape[0])\n",
-    "#X=X[permidx]\n",
-    "#Y=Y[permidx]\n",
-    "\n",
-    "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y,  \n",
-    "                                                    train_size=0.8,  \n",
-    "                                                    test_size=0.2)\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y,  train_size=0.8,  test_size=0.2)\n",
     "\n",
     "plt.scatter(X_train[:,0],Y_train)\n",
     "plt.show()"
@@ -63,7 +52,6 @@
     "from keras.regularizers import l2, activity_l2\n",
     "from keras.layers.normalization import BatchNormalization\n",
     "from keras.optimizers import SGD\n",
-    "\n",
     "\n",
     "model = Sequential()\n",
     "model.add(Dense(output_dim=50, input_dim=X_train.shape[1]))\n",
